// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resource Upload Component > file upload > should render component 1`] = `
"<div><button type="button" class="oc-button oc-button-m oc-button-justify-content-left oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 inline-flex">
    <!--v-if-->
    <!-- @slot Content of the button --> <span class="oc-icon oc-icon-m box-content oc-resource-icon inline-flex items-center oc-resource-icon-file h-full"><svg data-testid="inline-svg-stub" src="icons/resource-type-file-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" style="fill: var(--oc-role-on-surface);"></svg></span> <span id="files-file-upload-button">Files</span>
  </button> <input id="files-file-upload-input" multiple="" class="absolute left-[99999px]" type="file" aria-labelledby="files-file-upload-button" name="folder" tabindex="-1"></div>"
`;

exports[`Resource Upload Component > folder upload > should render component 1`] = `
"<div><button type="button" class="oc-button oc-button-m oc-button-justify-content-left oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 inline-flex">
    <!--v-if-->
    <!-- @slot Content of the button --> <span class="oc-icon oc-icon-m box-content oc-resource-icon inline-flex items-center oc-resource-icon-folder h-full"><svg data-testid="inline-svg-stub" src="icons/resource-type-folder-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" style="fill: var(--oc-color-icon-folder);"></svg></span> <span id="files-folder-upload-button">Folder</span>
  </button> <input id="files-folder-upload-input" webkitdirectory="true" mozdirectory="true" allowdirs="true" class="absolute left-[99999px]" type="file" aria-labelledby="files-folder-upload-button" name="file" tabindex="-1"></div>"
`;
